# streamlit_3d_viewer

./: .gitignore  20250816_수정내역.md  20250818_3d_dimension_line_수정내역.md  20250818_uv_seam보이는문제_해결방안.md  3d_dimension_line.md  AGENTS.md  CLAUDE.md  DELETE_SETUP.md  HTTPS_CHECKLIST.md  README.md  SECURITY_SIMPLE.md  SERVER_SETUP.md  WEB_SERVER_SETUP.md  annotations_api.py  app.py  auth.py  auth_backup.py  check_https.sh  cloud_storage.py  database.py  database_api.py  debug_helper.html  delete.php  deploy_to_hf.sh  feedback_api.py  feedback_proxy.py  fix_database.py  force_reset_db.py  google_drive.py  hf_minimal_changes.py  https_proxy.py  loading.md  loading.php  main.py  mtl_generator.py  optimize_texture.py  prepare_for_hf.sh  pyproject.toml  requirements.txt  streamlit_데이터_손실_문제_분석.md  (+33 more)
php/: .htaccess  api_annotations.php  api_delete_model.php  api_get_model.php  api_get_models.php  api_save_model.php  api_update_height.php  get_all_models.php  init_database.php  save_model.php  scan_and_rebuild_db.php
php/files/467e86a5872a46f49373e0ede3b5168b/: model.mtl
php/files/6d5c22c4d934477c94c100123b305bac/: model.mtl
php/files/a521f9171c804907bdb47a5235b384fe/: model.mtl
php/files/cd39557276574f2aa07b97c03e57014c/: model.mtl
php/files/f6fc06b2b2654691809a7ad4a6aa5791/: model.mtl
static/: model-cache.js  service-worker.js
web_server_scripts/: feedback_api.php  init_database.php  load_model.php  model_api.php
